[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
feed-rs = "2.2.0"
rustpotion = "0.3.0"
reqwest = {version="0.12.9", features = ["rustls-tls"], default-features = false }
tokio = {version="1.42.0",  features = ["full"]}
futures = "0.3.31"
unicode-normalization = "0.1.24"
serde_json = { version = "1", features = ["raw_value"] }
chrono = "0.4.38"
serde = "1.0.215"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
simple_logger = "5.0.0"
log = "0.4.22"


[lib]
name = "watchdog"
path = "src/lib.rs"
